--- a/Index.html
+++ b/Index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="LIBROS, LIBRO" />
-    <link href="diseños/3col.css" rel="stylesheet" type="text/css"/>
-    <link href="diseños/reglas.css" rel="stylesheet" type="text/css"/>
+    <link href="diseños/3col.css" rel="stylesheet" type="text/css" />
+    <link href="diseños/reglas.css" rel="stylesheet" type="text/css" />
+    <link href="diseños/2col.css" rel="stylesheet" type="text/css" />
     <title>LIBROS</title>
 </head>
 
 <body>
     <header>
         <p id=portada>LIBROS</p>
-        <!-- <img id="portada" src="images/portada.jpg" alt="Pacari"> -->
     </header>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="Index.html">PRINCIPAL: LIBORS</a></li>
             <li><a href="mejores.html">LOS MEJORES LIBROS</a></li>
@@ -24,70 +24,85 @@
             <li><a href="mislibros.html">MIS LIBROS</a></li>
         </ul>
     </nav>
-    <section>
-        <article>
-            <h4>LOS LIBROS</h4>
-            <p> Un libro (del latín liber, libri) es una obra impresa, manuscrita o pintada en una serie de hojas de
-                papel, pergamino, vitela u otro material, unidas por un lado (es decir, encuadernadas) y protegidas con
-                tapas, también llamadas cubiertas. Un libro puede tratar sobre cualquier tema.
+    <div>
+        <section>
+            <article>
+                <h4>LOS LIBROS</h4>
+                <p> Un libro (del latín liber, libri) es una obra impresa, manuscrita o pintada en una serie de hojas de
+                    papel, pergamino, vitela u otro material, unidas por un lado (es decir, encuadernadas) y protegidas
+                    con
+                    tapas, también llamadas cubiertas. Un libro puede tratar sobre cualquier tema.
 
-                Según la definición de la Unesco, un libro debe poseer 25 hojas mínimo (49 páginas), pues de 24 hojas
-                sería un folleto y de una hasta cuatro páginas se consideran hojas sueltas (en una o dos hojas).
+                    Según la definición de la Unesco, un libro debe poseer 25 hojas mínimo (49 páginas), pues de 24
+                    hojas
+                    sería un folleto y de una hasta cuatro páginas se consideran hojas sueltas (en una o dos hojas).
 
-                También se llama "libro" a una obra de gran extensión publicada en varias unidades independientes,
-                llamados "tomos" o "volúmenes". Otras veces se llama también "libro" a cada una de las partes de una
-                obra, aunque físicamente se publiquen todas en un mismo volumen (ejemplo: Libros de la Biblia).</p>
-            <img src="images/libros.jpg" alt="">
-        </article>
-        <aside>
-            <h4>LA ESCRITURA</h4>
-            <p>Cuando los sistemas de escritura fueron inventados en las antiguas civilizaciones, el hombre utilizó
-                diversos soportes de escritura: tablillas de arcilla, ostracon, placas de hueso o marfil, tablas de
-                madera, papiros, tablillas enceradas, planchas de plomo, pieles curtidas, etc.
+                    También se llama "libro" a una obra de gran extensión publicada en varias unidades independientes,
+                    llamados "tomos" o "volúmenes". Otras veces se llama también "libro" a cada una de las partes de una
+                    obra, aunque físicamente se publiquen todas en un mismo volumen (ejemplo: Libros de la Biblia).</p>
+                <img src="images/libros.jpg" alt="">
+            </article>
+            <aside>
+                <h4>LA ESCRITURA</h4>
+                <p>Cuando los sistemas de escritura fueron inventados en las antiguas civilizaciones, el hombre utilizó
+                    diversos soportes de escritura: tablillas de arcilla, ostracon, placas de hueso o marfil, tablas de
+                    madera, papiros, tablillas enceradas, planchas de plomo, pieles curtidas, etc.
 
-                La escritura fue el resultado de un proceso lento de evolución con diversos pasos: imágenes que
-                reproducían objetos cotidianos (pictografía); representación mediante símbolos (ideografía); y la
-                reproducción de sílabas y letras.
+                    La escritura fue el resultado de un proceso lento de evolución con diversos pasos: imágenes que
+                    reproducían objetos cotidianos (pictografía); representación mediante símbolos (ideografía); y la
+                    reproducción de sílabas y letras.
 
-                Los más antiguos vestigios de escritura se encuentran, hacia finales del IV milenio a. C., en el Antiguo
-                Egipto, con jeroglíficos, y la antigua Mesopotamia, mediante signos cuneiformes (escritura cuneiforme;
-                utilizaban una varilla con sección triangular, que al hendir en placas de arcilla, dejaba una marca en
-                forma de cuña). La usaron los sumerios, acadios, asirios, hititas, persas, babilonios etc. La escritura
-                egipcia, que perduró más de tres milenios, mediante jeroglíficos, representaba ideas abstractas,
-                objetos, palabras, sílabas, letras y números. Evolucionó en las escrituras hierática y demótica. Otros
-                pueblos, como los hititas y los aztecas también tuvieron tipos propios de escritura.</p>
-        </aside>
-        <aside>
-            <h4>LITERATURA</h4>
-            <p>Según la definición de la Real Academia Española (RAE), la literatura es el «arte de la expresión
-                verbal» (entendiéndose como verbal aquello «que se refiere a la palabra, o se sirve de ella») y, por
-                lo tanto, abarca tanto textos escritos (literatura escrita) como hablados o cantados (literatura oral).
-                En un sentido más restringido y 'neotradicional' (ya que las primeras obras literarias fueron compuestas
-                para ser cantadas y/o recitadas), es la escritura que posee mérito artístico y que privilegia la
-                literariedad, en oposición al lenguaje ordinario de intención menos estética y más práctica. El término
-                literatura designa también al conjunto de producciones literarias de una lengua, de una nación, de una
-                época o incluso de un género (la literatura griega, la literatura del siglo XVIII, la literatura
-                fantástica, etc.) y al conjunto de obras que versan sobre un arte o una ciencia (literatura médica,
-                jurídica, etc.). Es estudiada por la teoría literaria.</p>
-        </aside>
-    </section>
-    <section>
-        <aside>
-            <h4>Tour</h4>
-            <p>Pacari junto a la comunidad kichwa Santa Rita ofrece un day tour para conocer el maravilloso entorno
-                cultural y ambiental
-                en el que se cultiva el cacao para tu chocolate Pacari. En esta experiencia podrás conocer y entender de
-                qué manera el cacao
-                es fundamental para sostener los sistemas agroforestales y de agricultura familiar en las comunidades
-                con las que trabajamos.
-                Visitarás chakras kichwas con sistemas de permacultura de especies nativas</p>
-        </aside>
-    </section>
+                    Los más antiguos vestigios de escritura se encuentran, hacia finales del IV milenio a. C., en el
+                    Antiguo
+                    Egipto, con jeroglíficos, y la antigua Mesopotamia, mediante signos cuneiformes (escritura
+                    cuneiforme;
+                    utilizaban una varilla con sección triangular, que al hendir en placas de arcilla, dejaba una marca
+                    en
+                    forma de cuña). La usaron los sumerios, acadios, asirios, hititas, persas, babilonios etc. La
+                    escritura
+                    egipcia, que perduró más de tres milenios, mediante jeroglíficos, representaba ideas abstractas,
+                    objetos, palabras, sílabas, letras y números. Evolucionó en las escrituras hierática y demótica.
+                    Otros
+                    pueblos, como los hititas y los aztecas también tuvieron tipos propios de escritura.</p>
+            </aside>
+            <aside>
+                <h4>LITERATURA</h4>
+                <p>Según la definición de la Real Academia Española (RAE), la literatura es el «arte de la expresión
+                    verbal» (entendiéndose como verbal aquello «que se refiere a la palabra, o se sirve de ella») y, por
+                    lo tanto, abarca tanto textos escritos (literatura escrita) como hablados o cantados (literatura
+                    oral).
+                    En un sentido más restringido y 'neotradicional' (ya que las primeras obras literarias fueron
+                    compuestas
+                    para ser cantadas y/o recitadas), es la escritura que posee mérito artístico y que privilegia la
+                    literariedad, en oposición al lenguaje ordinario de intención menos estética y más práctica. El
+                    término
+                    literatura designa también al conjunto de producciones literarias de una lengua, de una nación, de
+                    una
+                    época o incluso de un género (la literatura griega, la literatura del siglo XVIII, la literatura
+                    fantástica, etc.) y al conjunto de obras que versan sobre un arte o una ciencia (literatura médica,
+                    jurídica, etc.). Es estudiada por la teoría literaria.</p>
+            </aside>
+        </section>
+        <section>
+            <aside>
+                <h4>Tour</h4>
+                <p>Pacari junto a la comunidad kichwa Santa Rita ofrece un day tour para conocer el maravilloso entorno
+                    cultural y ambiental
+                    en el que se cultiva el cacao para tu chocolate Pacari. En esta experiencia podrás conocer y
+                    entender de
+                    qué manera el cacao
+                    es fundamental para sostener los sistemas agroforestales y de agricultura familiar en las
+                    comunidades
+                    con las que trabajamos.
+                    Visitarás chakras kichwas con sistemas de permacultura de especies nativas</p>
+            </aside>
+        </section>
+    </div>
     <footer>
         RICARDO VINICIO JARA JARA. &#8226; Universidad Politecnica Salesiana &#8226;
         e-mail: <a href="mailto:rjaraj@est.ups.edu.ec"> jcanaru@est.ups.edu.ec</a>
         Telf: <a href="tel:+593990550716">(+593) 990550716</a>
-        “ <br/>  Todos los derechos reservados. &#169; ”.
+        “ <br /> Todos los derechos reservados. &#169; ”.
     </footer>
 </body>
 
