--- a/mejores.html
+++ b/mejores.html
@@ -3,15 +3,18 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="lOS MEJORES LIBORS" />
+    <meta name="keywords" content="LIBROS, LIBRO" />
+    <link href="diseños/3col.css" rel="stylesheet" type="text/css" />
+    <link href="diseños/reglas.css" rel="stylesheet" type="text/css" />
+    <link href="diseños/2col.css" rel="stylesheet" type="text/css" />
     <title>LIBROS</title>
 </head>
 
 <body>
     <header>
-        <img src="images/portada.jpg" alt="">
+        <p id=portada>LIBROS</p>
     </header>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="Index.html">PRINCIPAL: LIBORS</a></li>
             <li><a href="mejores.html">LOS MEJORES LIBROS</a></li>
