--- a/Historia.html
+++ b/Historia.html
@@ -3,15 +3,18 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="Pacari" />
-    <title>Pacari Chocolate</title>
+    <meta name="keywords" content="LIBROS, LIBRO" />
+    <link href="diseños/3col.css" rel="stylesheet" type="text/css" />
+    <link href="diseños/reglas.css" rel="stylesheet" type="text/css" />
+    <link href="diseños/2col.css" rel="stylesheet" type="text/css" />
+    <title>LIBROS</title>
 </head>
 
 <body>
     <header>
-        <img src="images/portada.jpg" alt="">
+        <p id=portada>LIBROS</p>
     </header>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="Index.html">PRINCIPAL: LIBORS</a></li>
             <li><a href="mejores.html">LOS MEJORES LIBROS</a></li>
@@ -21,35 +24,40 @@
             <li><a href="mislibros.html">MIS LIBROS</a></li>
         </ul>
     </nav>
+    <div>
+        <section>
+            <article>
+                <h4>El primer libro del mundo </h4>
+                <p> Gutenberg, <mark>herrero alemán</mark> , inventó la imprenta de
+                    tipos móviles (de metal) en Europa y el primer libro que se imprimió en su imprenta fue el Misal de
+                    Constanza, entre los años 1449 y 1450.12 may. 2017</p>
+                <img src="images/rosa.jpg" alt="">
+            </article>
+            <aside>
+                <h4>El libro más antiguo del país. </h4>
+                <p>Data de 1482. Es un comentario a la metafísica de Aristóteles, hecho por un religioso. Alfredo
+                    Armijos,
+                    historiador, revela que esos libros antiguos fueron traídos en barco desde Europa en la época
+                    colonial.
+                    Algunos como contrabando. Se los ocultaba dentro de toneles de vino y así cruzaban el océano (Diario
+                    EL
+                    COMERCIO).</p>
 
-    <section>
-        <article>
-            <h4>El primer libro del mundo </h4>
-            <p> Gutenberg, <mark>herrero alemán</mark> , inventó la imprenta de
-                tipos móviles (de metal) en Europa y el primer libro que se imprimió en su imprenta fue el Misal de
-                Constanza, entre los años 1449 y 1450.12 may. 2017</p>
-            <img src="images/rosa.jpg" alt="">
-        </article>
-        <aside>
-            <h4>El libro más antiguo del país. </h4>
-            <p>Data de 1482. Es un comentario a la metafísica de Aristóteles, hecho por un religioso. Alfredo Armijos,
-                historiador, revela que esos libros antiguos fueron traídos en barco desde Europa en la época colonial.
-                Algunos como contrabando. Se los ocultaba dentro de toneles de vino y así cruzaban el océano (Diario EL
-                COMERCIO).</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/xR5eMeth8oE" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xR5eMeth8oE" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            </aside>
+            <aside>
+                <h4>Los tipos de libros más importantes según su contenido son: </h4>
+                <p>Científicos
+                    Literatura y lingüísticos, De viaje, Biografías, Libro de texto, Libros de gran formato (Coffee
+                    Table
+                    Book), De referencia o consulta, Monografías.</p>
+            </aside>
 
-        </aside>
-        <aside>
-            <h4>Los tipos de libros más importantes según su contenido son: </h4>
-            <p>Científicos
-                Literatura y lingüísticos, De viaje, Biografías, Libro de texto, Libros de gran formato (Coffee Table
-                Book), De referencia o consulta, Monografías.</p>
-        </aside>
-
-    </section>
+        </section>
+    </div>
     <footer>
         RICARDO VINICIO JARA JARA. &#8226; Universidad Politecnica Salesiana &#8226;
         e-mail: <a href="mailto:rjaraj@est.ups.edu.ec"> jcanaru@est.ups.edu.ec</a>
